crates/parser/tests/snapshots/inline/ok/break_stmt.snap
---
source: crates/parser/tests/inline_ok.rs
---
# break_stmt

## Input

```
break
```

## CST

```
SOURCE_FILE@0..5
  BREAK_STMT@0..5
    BREAK_KW@0..5 "break"
```

## AST

```
SourceFile {
    shebang: none,
    statements: [
        BreakStmt {
            break_token: BREAK_KW@0..5 "break",
        },
    ],
}
```

vim:ft=markdown
