crates/parser/tests/snapshots/inline/ok/continue_stmt.snap
---
source: crates/parser/tests/inline_ok.rs
---
# continue_stmt

## Input

```
continue
```

## CST

```
SOURCE_FILE@0..8
  CONTINUE_STMT@0..8
    CONTINUE_KW@0..8 "continue"
```

## AST

```
SourceFile {
    shebang: none,
    statements: [
        ContinueStmt {
            continue_token: CONTINUE_KW@0..8 "continue",
        },
    ],
}
```

vim:ft=markdown
